// ============================================================
//  RAO MOTOS — Modelo de datos (DBML para dbdiagram.io)
//  Pega este contenido en https://dbdiagram.io  (Import > paste)
//  Dominio: venta de repuestos + taller de motos, con crédito/cuotas.
// ============================================================

// ---------- Enums ----------
Enum rol_nombre { admin vendedor almacenero mecanico cliente }
Enum tecnica_inventario { PERMANENTE PERIODICO }
Enum tecnica_costo { PEPS UEPS PROMEDIO }
Enum tipo_movimiento { INGRESO EGRESO }
Enum estado_compra { PENDIENTE RECIBIDA ANULADA }
Enum tipo_venta { CONTADO CREDITO }
Enum metodo_pago_venta { EFECTIVO QR }
Enum estado_venta { COMPLETADA PENDIENTE ANULADA }
Enum estado_credito { VIGENTE PAGADO MOROSO }
Enum estado_cuota { PENDIENTE PAGADO VENCIDO }
Enum estado_pedido { SOLICITADO APROBADO RECHAZADO EN_PROCESO DESPACHADO ANULADO }
Enum estado_orden { RECIBIDA DIAGNOSTICADA EN_REPARACION TERMINADA ENTREGADA CANCELADA }
Enum estado_detalle_orden { SOLICITADO APROBADO RECHAZADO ENTREGADO }
Enum accion_bitacora { LOGIN_OK LOGIN_FAIL ACCESO_RECURSO }

// ---------- CU1 · Usuarios ----------
Table roles {
  id bigint [pk, increment]
  nombre rol_nombre [not null]
  descripcion varchar
}

Table users {
  id bigint [pk, increment]
  nombre varchar [not null]
  apellidos varchar
  ci varchar [unique, note: 'carnet personal']
  telefono varchar
  direccion varchar
  email varchar [unique]
  password varchar
  profile_photo_path varchar
  estado boolean [default: true]
  fecha_nacimiento date
  role_id bigint [ref: > roles.id]
}

Table cliente {
  id bigint [pk, ref: - users.id, note: 'PK = users.id (herencia 1:1)']
  nit_ci varchar [note: 'dato de facturación; no hay tipo de cliente']
}

// ---------- CU2 · Productos / CU5 · Inventario ----------
Table producto {
  id bigint [pk, increment]
  codigo varchar [unique, not null]
  nombre varchar [not null]
  marca varchar
  modelo varchar
  descripcion text
  precio_venta_base decimal [note: 'minorista']
  precio_mayorista decimal
  cantidad_minima_mayorista int [default: 1, note: 'umbral mayorista por producto']
  foto_url varchar
  activo boolean [default: true]
}

Table inventario {
  id bigint [pk, increment]
  producto_id bigint [ref: - producto.id]
  stock_actual int [default: 0]
  stock_minimo int [default: 0]
  tecnica_inventario tecnica_inventario
  tecnica_costo tecnica_costo
  fecha_actualizacion timestamp
}

Table movimiento_inventario {
  id bigint [pk, increment]
  inventario_id bigint [ref: > inventario.id]
  tipo_movimiento tipo_movimiento
  cantidad int
  motivo varchar
  fecha timestamp
}

// ---------- CU3 · Compras y proveedores ----------
Table proveedor {
  id bigint [pk, increment]
  razon_social varchar [not null]
  contacto_principal varchar
  nit varchar
  telefono varchar
  activo boolean [default: true]
}

Table compra {
  id bigint [pk, increment]
  proveedor_id bigint [ref: > proveedor.id]
  fecha timestamp
  total decimal [note: 'calculado por el servidor desde el detalle']
  estado estado_compra [default: 'PENDIENTE']
}

Table detalle_compra {
  id bigint [pk, increment]
  compra_id bigint [ref: > compra.id]
  producto_id bigint [ref: > producto.id]
  cantidad int
  precio_unitario decimal
}

// ---------- CU4 · Pedidos ----------
Table pedido {
  id bigint [pk, increment]
  cliente_id bigint [ref: > cliente.id]
  fecha timestamp
  estado estado_pedido [default: 'SOLICITADO']
  motivo_rechazo varchar
  venta_id bigint [ref: > venta.id, note: 'venta generada al aprobar']
}

Table detalle_pedido {
  id bigint [pk, increment]
  pedido_id bigint [ref: > pedido.id]
  producto_id bigint [ref: > producto.id]
  cantidad int
}

// ---------- CU6 · Ventas ----------
Table venta {
  id bigint [pk, increment]
  numero_venta varchar [unique]
  cliente_id bigint [ref: > cliente.id]
  vendedor_id bigint [ref: > users.id]
  fecha timestamp
  monto_total decimal [note: 'calculado por el servidor']
  tipo_venta tipo_venta
  metodo_pago metodo_pago_venta
  estado estado_venta [default: 'PENDIENTE']
  pago_facil_transaction_id varchar
  pago_facil_payment_number varchar
  pago_facil_qr_image text
  pago_facil_status varchar
  pago_facil_raw_response text
}

Table detalle_venta {
  id bigint [pk, increment]
  venta_id bigint [ref: > venta.id]
  producto_id bigint [ref: > producto.id, note: 'NULL = servicio/mano de obra']
  descripcion varchar
  cantidad int
  precio_unitario decimal
}

// ---------- CU7 · Créditos y pagos ----------
Table credito {
  id bigint [pk, increment]
  venta_id bigint [unique, ref: - venta.id]
  numero_cuotas int [note: '>= 2']
  tasa_interes decimal
  saldo_pendiente decimal
  estado estado_credito [default: 'VIGENTE']
}

Table metodos_pago {
  id bigint [pk, increment]
  nombre varchar [note: 'EFECTIVO, QR']
  activo boolean [default: true]
}

Table pago_cuota {
  id bigint [pk, increment]
  credito_id bigint [ref: > credito.id]
  numero_cuota int
  monto_cuota decimal
  fecha_vencimiento date
  fecha_pago date
  mora decimal [default: 0]
  estado estado_cuota [default: 'PENDIENTE']
  metodo_pago_id bigint [ref: > metodos_pago.id]
  pago_facil_transaction_id varchar
  pago_facil_payment_number varchar
  pago_facil_qr_image text
  pago_facil_status varchar
  pago_facil_raw_response text
}

// ---------- CU9 · Taller ----------
Table moto {
  id bigint [pk, increment]
  cliente_id bigint [ref: > cliente.id]
  placa varchar
  marca varchar
  modelo varchar
  anio int
}

Table orden_trabajo {
  id bigint [pk, increment]
  cliente_id bigint [ref: > cliente.id]
  moto_id bigint [ref: > moto.id]
  fecha_ingreso timestamp
  descripcion_problema text
  diagnostico text
  fecha_diagnostico timestamp
  costo_estimado_mano_obra decimal
  costo_estimado_repuestos decimal
  presupuesto_aprobado boolean [default: false]
  costo_mano_obra decimal [note: 'real, al facturar']
  venta_id bigint [ref: > venta.id, note: 'factura generada']
  estado estado_orden [default: 'RECIBIDA']
}

Table detalle_orden {
  id bigint [pk, increment]
  orden_trabajo_id bigint [ref: > orden_trabajo.id]
  producto_id bigint [ref: > producto.id]
  cantidad int
  estado estado_detalle_orden [default: 'SOLICITADO']
  motivo varchar
}

// ---------- Soporte y requisitos ----------
Table configuracion {
  id bigint [pk, increment]
  clave varchar [note: 'ej. tasa_mora_diaria, tasa_interes_credito']
  valor varchar
  descripcion varchar
}

Table menu_items {
  id bigint [pk, increment]
  etiqueta varchar
  ruta_laravel varchar
  icono varchar
  orden int
  parent_id bigint [ref: > menu_items.id]
  role_id bigint [ref: > roles.id]
  activo boolean [default: true]
}

Table notificacion {
  id bigint [pk, increment]
  usuario_id bigint [ref: > users.id]
  tipo varchar [note: 'STOCK_BAJO, SOLICITUD_REPUESTO, PEDIDO_POR_APROBAR, PRESUPUESTO, MORA']
  mensaje varchar
  recurso varchar
  leido boolean [default: false]
  fecha timestamp
}

Table bitacora {
  id bigint [pk, increment]
  usuario_id bigint [ref: > users.id]
  email varchar
  accion accion_bitacora
  recurso varchar
  ip varchar
  user_agent varchar
  fecha timestamp
}

Table page_visits {
  id bigint [pk, increment]
  ruta varchar [unique]
  contador bigint [default: 0]
}
